# birthday-guard-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: main.py
app/bot/handlers/: admin.py
app/bot/middlewares/: admin_check.py
app/core/: config.py  logging.py
app/models/: birthday_event.py  employee.py
app/repositories/: birthday_event_repo.py
app/services/: birthday_service.py  google_sheets_service.py  scheduler_service.py  telegram_service.py
app/utils/: date_utils.py
specs/001-birthday-guard-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-birthday-guard-bot/checklists/: requirements.md
specs/001-birthday-guard-bot/contracts/: telegram-commands.md
specs/002-fix-graceful-shutdown/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-graceful-shutdown/checklists/: requirements.md
tests/: conftest.py  test_admin_handler.py  test_birthday_event_repo.py  test_birthday_service.py  test_date_utils.py  test_google_sheets_service.py  test_shutdown.py
