[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birthday-guard-bot"
version = "0.1.0"
description = "Telegram bot that tracks employee birthdays and manages group membership"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7.0",
    "apscheduler>=3.10.4",
    "gspread>=6.1.2",
    "google-auth>=2.29.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "aiosqlite>=0.20.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "freezegun>=1.5.0",
    "types-pytz>=2024.1.0.20240417",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "ANN",       # flake8-annotations
    "RUF",       # ruff-specific
]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["gspread.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
